testsuite/veronac/codegen/compile-fail/main-has-arguments.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class Main {
  // CHECK-L: main-has-arguments.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main(x: U64) { }
}
